[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnc-client"
version = "0.0.0"
description = "Python client for the Lance Wire Protocol (LWP) — high-performance, low-latency data streaming"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Will Hattingh", email = "nitecon@gmail.com" },
]
keywords = ["lance", "lwp", "streaming", "data-ingestion", "high-performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = [
    "lz4>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/nitecon/lnc-client-py"
Documentation = "https://github.com/nitecon/lnc-client-py#readme"
Issues = "https://github.com/nitecon/lnc-client-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lnc_client"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "LICENSE", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
